update add employe with contrat duration
